gccida/g1/x86_initialize_trampoline
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/x86_initialize_trampoline/src/i386.c:11396:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 10894, "x86_initialize_trampoline"); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/x86_initialize_trampoline/src/obj/i386.o] Error 1
